[tool.poetry]
name = "repo_dashboard"
version = "0.1.0"
description = "Dashboard for tracking your organization's repo"
authors = ["Erik-Jan van Kesteren <erikjanvankesteren@pm.me>", "Donatas Rasiukevičius <donatas@rasiukevicius.dev>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
jinja2 = "^3.1.2"
toml = "^0.10.2"
textstat = "^0.7.3"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"