[project]
name = "fairprojects"
version = "0.1.0"
description = "Dashboard for tracking your organization's repo"
authors = [
    { name = "Erik-Jan van Kesteren", email = "erikjanvankesteren@pm.me" },
    { name = "Donatas RasiukeviÄius", email = "donatas@rasiukevicius.dev" },
]
readme = "readme.md"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.24.1",
    "jinja2>=3.1.2",
    "toml>=0.10.2",
    "textstat>=0.7.3",
    "markdown>=3.5.1",
]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
